--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4",
-        "symfony/http-foundation": "^5.2"
+        "symfony/http-foundation": "^5.2",
+        "vlucas/phpdotenv": "^5.3"
+    },
+    "autoload": {
+        "psr-0": {
+            "Climbman\\ApiMeteoVisualization\\": "src/"
+        }
     }
 }
