--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,20 @@
 BASE_API_URL=https://api.meteo.lt/
 MAX_CACHE_AGE=10800
 CACHE_DIR=cache
+
+# Docker services
+
+## General
+APP_ENV=prod
+
+## fpm service
+HOST_COMPOSER_HOME=~/.composer
+
+## http service
+PORT_HTTP=80
+
+## mysql service
+APP_DATABASE_USER=webuser
+APP_DATABASE_NAME=web
+APP_DATABASE_PASSWORD=webuser
+APP_PORT_MYSQL=33006
