refactor; add phpmyadmin; add sql structure

--- a/.env.dist
+++ b/.env.dist
@@ -13,8 +13,11 @@ HOST_COMPOSER_HOME=~/.composer
 ## http service
 PORT_HTTP=80
 
+## PHPMyAdmin
+APP_PHPMYADMIN_PORT=5000
+
 ## mysql service
-APP_DATABASE_USER=webuser
-APP_DATABASE_NAME=web
-APP_DATABASE_PASSWORD=webuser
+APP_DATABASE_USER=web
+APP_DATABASE_NAME=meteo_forecasts
+APP_DATABASE_PASSWORD=secret
 APP_PORT_MYSQL=33006
