--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,22 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
       MYSQL_USER: '${APP_DATABASE_USER:-test_user}'
-      MYSQL_DATABASE: '${APP_DATABASE_NAME:-test_db}'
       MYSQL_PASSWORD: '${APP_DATABASE_PASSWORD:-test_pass}'
     volumes:
       - './docker/config/mysql/initdb.d:/docker-entrypoint-initdb.d:ro'
     ports:
       - '${APP_PORT_MYSQL:-33006}:3306'
+    networks:
+      - 'app'
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:5.1.1
+    environment:
+      PMA_HOST: mysql
+      PMA_USER: '${APP_DATABASE_USER:-test_user}'
+      PMA_PASSWORD: '${APP_DATABASE_PASSWORD:-test_pass}'
+    ports:
+      - "${APP_PHPMYADMIN_PORT:-5000}:80"
     networks:
       - 'app'
 
